--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -55,6 +55,7 @@
 
 .ceate_contract{
   cursor: pointer;
+  padding-top: 12px;
 }
 
 .ceate_contract_text{
@@ -211,11 +212,11 @@ h3{
   background: url("../../../assets/img/frame_db1.svg");
   background-size: cover;
   width: 100%;
-  height: 200px;
+  height: 170px;
   color: #FFFFFF;
   border-radius: 12px;
   padding: 24px;
-  // display: flex;
+  margin-bottom: 24px;
 }
 
 .contract-processing{
@@ -259,12 +260,12 @@ h3{
 .btn_add_contract{
   border: 0px;
   border-radius: 6px;
-  width: 180px;
+  width: 130px;
   height: 38px;
   box-sizing: border-box;
-  color: #001A4D;
+  color: #0041C4;
   background: #FFFFFF;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 700;
 }
 
