--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -330,8 +330,8 @@ h3 {
 }
 
 .item_contract_infor {
-  font-size: 11px;
-  color: #666666;
+  font-size: 12px;
+  color: var(--Text-Secondary, #8E9AB0);
 }
 
 .status_blue {
