--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -113,14 +113,16 @@
                 <div class="col-md-12 item_contract_name1">{{item.participant.contract.name}}</div>
               </div>
               <div class="row">
+                <div class="item_contract_infor">{{'created.user' | translate}}: {{item.participant.contract.nameUserCreate}} ({{item.participant.contract.organization_create_contract}})</div>
                 <div style="display: flex; justify-content: space-between;">
-                  <div style="padding-top: 8px;">
+                  
+                  <div>
                     <img src="../../../assets/img/path.svg"/>
                     <span *ngIf="item.sign_type.length > 0" class="name_required">{{item.sign_type[0]?.name}}</span>
                     <span *ngIf="item.role == 1" style="color: #EE7200; padding: 5px;">{{'Đang điều phối' | translate}}</span>
                     <span *ngIf="item.role == 2" style="color: #EE7200; padding: 5px;">{{'Đang xem xét' | translate}}</span>
                   </div>
-                  <div style="padding-top: 8px;">
+                  <div>
                     <img src="../../../assets/img/calendar-tick.svg"/>
                     <span style="color: #8E9AB0; padding: 5px;">{{item.participant.contract.created_time | date:'dd/MM/yyyy HH:mm:ss'}}</span>
                   </div>
