update giao diện và responsive phân trang 1 trang mẫu bản nháp

--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -11,11 +11,11 @@
   margin-top: 12px;
 }
 
-.item_contract:hover{
+// .item_contract:hover{
   // background-color: rgb(255, 254, 254);
-  box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
-  border: 1px solid #C3D7FF;
-}
+  // box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
+  // border: 1px solid #C3D7FF;
+// }
 
 .item_contract_name {
   font-weight: 700;
@@ -106,7 +106,7 @@
   border: 1px solid #106DB6;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+// .pagination a:hover:not(.active) {background-color: #ddd;}
 
 .input-checkbox{
   text-align: left;
@@ -198,29 +198,56 @@
 :host ::ng-deep {
   .ngx-pagination {
     padding: 0;
+    font-family: 'Roboto';
+  }
+  .ngx-pagination .current {
+    background: #0041C4;
   }
   .ngx-pagination a, .ngx-pagination button {
     text-decoration: none;
-    background: #f3f3f3;
+    background: #F3F6FA;
+    color: #A8B5CE;
+  }
+  .ngx-pagination a:hover, .ngx-pagination button:hover {
+    background-color: #F3F6FA;
+  }
+  .ngx-pagination ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
   .ngx-pagination li {
-    width: 50px;
-    border-radius: 5px;
+    border-radius: 5.8px;
+    margin: 0 4px;
+    // width: 50px;
+    // background-color: #0041C4;
+    // width: 24px;
+    // height: 24px;
+    // text-align: center;
+    // vertical-align: middle;
+  }
+  .ngx-pagination li span {
+    display: block;
+  }
+  .ngx-pagination button {
+    background-color: #0041C4;
   }
   .ngx-pagination .pagination-previous a::before,
   .ngx-pagination .pagination-previous.disabled::before {
     font-family: 'Material Icons';
-    content: 'keyboard_arrow_left';
+    content: url('../../../assets/img/Vector_left.svg');
     vertical-align: middle;
-    display: inline;
+    display: flex;
+    align-items: center;
     margin: 0;
   }
   .ngx-pagination .pagination-next a::after,
   .ngx-pagination .pagination-next.disabled::after {
     font-family: 'Material Icons';
-    content: 'keyboard_arrow_right';
+    content: url('../../../assets/img/Vector_right.svg');
     vertical-align: middle;
-    display: inline;
+    display: flex;
+    align-items: center;
     margin: 0;
   }
 
@@ -274,7 +301,7 @@
   cursor: pointer;
   color: #8E9AB0;
 }
-.contract_footer{
+.contract_footer, .contract_footer_wide{
   padding-top: 10px;
   display: flex;
   justify-content: space-between;
@@ -346,9 +373,9 @@
   width: 20px;
   cursor: pointer;
 }
-.img_icon:hover{
-  width: 30px;
-}
+// .img_icon:hover{
+  // width: 30px;
+// }
 .calendar_create, .calendar_deadline, .item_icon{
   display: flex;
   flex-direction: column;
@@ -492,6 +519,97 @@ input::placeholder{
     flex: 0 0 100%;
     max-width: 100%;
     margin-top: 16px;
+  }
+}
+
+#contract-footer-responsive {
+  justify-content: space-between;
+  #contract-footer-per-page-responsive {
+    color: #A5AAB6;
+    display: flex;
+    flex-direction: row;
+    select{
+      height: 20px;
+      border: 1px solid #A5AAB6;
+      border-radius: 5px;
+    }
+  }
+  pagination-controls {
+    margin-top: 12px;
+  }
+  .footer_pagination {
+    @media (min-width: 794px) {
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+    }
+  }
+}
+
+@media (max-width: 1014px) {
+  #contract_footer_pagination_responsive {
+    margin-top: 12px;
+    margin-left: 66px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  #contract-footer-responsive .footer_pagination {
+    display: none;
+  }
+  #contract-footer-responsive {
+    margin-top: 12px;
+  }
+}
+
+@media (min-width: 1014px) {
+  #contract_footer_pagination_responsive {
+    display: none;
+  }
+  #contract-footer-responsive .footer_pagination {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  pagination-controls {
+    margin-top: 12px;
+  }
+}
+
+@media (max-width: 692px) {
+  #contract-footer-responsive {
+    flex-direction: column;
+    align-items: center;
+  }
+  #contract-footer-per-page-responsive,
+  #contract-footer-responsive .enterPage,
+  #contract-footer-responsive .footer_page_number {
+    margin-bottom: 12px;
+  }
+
+  #contract_footer_pagination_responsive {
+    margin: 0;
+  }
+  #contract-footer-per-page-responsive {
+    align-items: center;
+  }
+}
+
+@media (min-width: 1300px) {
+  #contract-footer-wide {
+    display: flex;
+  }
+  #contract-footer-responsive {
+    display: none;
+  }
+}
+
+@media (max-width: 1300px) {
+  #contract-footer-wide {
+    display: none;
+  }
+  #contract-footer-responsive {
+    display: flex;
   }
 }
 
