--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -240,6 +240,32 @@
       <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
       </div>
     </div>
+    <div class="contract_footer_responsive">
+      <div class="contract_footer_per_page_responsive">
+          <div>Số lượng hiển thị&nbsp;</div>
+          <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
+            <option value="" hidden>10</option>
+            <option *ngFor="let d of this.pageOptions">{{d}}</option>
+          </select>
+        <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+    </div>
+    <div class="footer_pagination">
+      <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+      <div class="enterPage" *ngIf="pageTotal > 0">
+          <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+          <p>của {{countPage()}} trang</p>
+      </div>
+    </div>
+      <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
+    </div>
+  </div>
+  <div class="contract_footer_pagination_responsive">
+    <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+    <div class="enterPage" *ngIf="pageTotal > 0">
+        <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+        <p>của {{countPage()}} trang</p>
+    </div>
+  </div>
     <div>{{roleMess | translate}}</div>
 </div>
 
@@ -501,7 +527,7 @@
 
       </ng-template>
     </div>
-    <div class="contract_footer" id="contract-footer-wide">
+    <div class="contract_footer">
       <div class="footer_contract_per_page">
           <div>Số lượng hiển thị&nbsp;</div>
           <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
@@ -522,8 +548,8 @@
         <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
       </div>
     </div>
-    <div class="contract_footer" id="contract-footer-responsive">
-        <div id="contract-footer-per-page-responsive">
+    <div class="contract_footer_responsive">
+        <div class="contract_footer_per_page_responsive">
             <div>Số lượng hiển thị&nbsp;</div>
             <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
               <option value="" hidden>10</option>
@@ -541,7 +567,7 @@
         <div class="footer_page_number">Hiển thị <span style="color:#001A4D ;">{{this.getPageStartEnd()}} / {{pageTotal}}</span> kết quả
       </div>
     </div>
-    <div class="footer_pagination" id="contract_footer_pagination_responsive">
+    <div class="contract_footer_pagination_responsive">
       <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
       <div class="enterPage" *ngIf="pageTotal > 0">
           <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
