--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -161,10 +161,10 @@
                     </div> -->
                     <div class="col-xxl-5 col-md-4">
                         <div class="row">
-                            <div class="col-md-11" style="display: flex;">
+                            <div class="col-md-11" style="display: flex; cursor: pointer;" (click)="openDetail(item.contractId)">
                               <img src="../../assets/img/frame_contract.svg" style="width: 72px;">
                               <div style="margin-left: 12px;">
-                                <div class="item_contract_name" (click)="openDetail(item.contractId)">{{item.contractName}}</div>
+                                <div class="item_contract_name">{{item.contractName}}</div>
 
                                 <div class="row">
                                   <div class="item_contract_infor">{{'created.user' | translate}}: {{item.name}} ({{item.participant.contract.organization_create_contract}})</div>
@@ -316,9 +316,9 @@
 
             <div *ngIf="filter_status == 11 || filter_status == 12 || filter_status == 13 || filter_status == 14">
                 <div class="row">
-                    <div class="col-xxl-5 col-md-5">
+                    <div class="col-xxl-5 col-md-5" (click)="openDetail(item.id)">
                         <div class="row">
-                            <div class="col-md-12 item_contract_name" (click)="openDetail(item.id)">{{item.name}}</div>
+                            <div class="col-md-12 item_contract_name">{{item.name}}</div>
                         </div>
                         <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
                             <div class="col-md-12 item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
@@ -364,11 +364,11 @@
                     </div>
                   </div> -->
                   <div class="col-xxl-5 col-md-4">
-                    <div  style="display: flex;">
+                    <div  style="display: flex; cursor: pointer;" (click)="openDetail(item.id)">
                     <img src="../../assets/img/frame_contract.svg" style="width: 72px;">
                       <div class="row">
                         <div style="margin-left: 12px;">
-                          <div class="col-md-12 item_contract_name" (click)="openDetail(item.id)">{{item.name}}</div>
+                          <div class="col-md-12 item_contract_name">{{item.name}}</div>
                           <div class="item_contract_infor">{{'created.user' | translate}}: {{item.nameUserCreate}} ({{item.organization_create_contract}})</div>
                           <div class="item_contract_infor">
                             <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.id)">{{'contract_processing_flow' | translate}}</u>
@@ -416,9 +416,9 @@
         <div *ngIf="filter_status == 11 || filter_status == 12 || filter_status == 13 || filter_status == 14">
           <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
             <div class="row">
-              <div class="col-xxl-5 col-md-5">
+              <div class="col-xxl-5 col-md-5" (click)="openDetail(item.id)">
                 <div class="row">
-                  <div class="col-md-12 item_contract_name" (click)="openDetail(item.id)">{{item.name}}</div>
+                  <div class="col-md-12 item_contract_name">{{item.name}}</div>
                 </div>
                 <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
                   <div class="col-md-12 item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
@@ -509,10 +509,10 @@
                     </div>
                     <div class="col-xxl-5 col-md-4">
                         <div class="row">
-                            <div class="col-md-11" style="display: flex;">
+                            <div class="col-md-11" style="display: flex; cursor: pointer;" (click)="openDetail(item.contractId)">
                               <img src="../../assets/img/frame_contract.svg" style="width: 72px;">
                               <div style="margin-left: 12px;">
-                                <div class="item_contract_name" (click)="openDetail(item.contractId)">{{item.participant.contract.name}}</div>
+                                <div class="item_contract_name">{{item.participant.contract.name}}</div>
                                 <div class="row">
                                   <div class="item_contract_infor">
                                     <u style="color: #106DB6; cursor: pointer" (click)="processHandleContract(item.contractId)">{{'contract_processing_flow' | translate}}</u>
@@ -638,10 +638,10 @@
                     </div>
                     <div class="col-xxl-5 col-md-4">
                         <div class="row">
-                            <div class="col-md-11" style="display: flex;">
+                            <div class="col-md-11" style="display: flex; cursor: pointer;" (click)="openDetail(item.contractId)">
                               <img src="../../assets/img/frame_contract.svg" style="width: 72px;">
                               <div style="margin-left: 12px;">
-                                <div class="item_contract_name" (click)="openDetail(item.contractId)">{{item.participant.contract.name}}</div>
+                                <div class="item_contract_name">{{item.participant.contract.name}}</div>
                                 <div class="row">
                                   <div class="item_contract_infor">{{'created.user' | translate}}: {{item.name}}</div>
                                   <div>
@@ -742,9 +742,9 @@
 
             <div *ngIf="filter_status == -1">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-5" (click)="openDetail(item.id)">
                         <div class="row">
-                            <div class="col-md-12 item_contract_name" (click)="openDetail(item.id)">{{item.name}}</div>
+                            <div class="col-md-12 item_contract_name" >{{item.name}}</div>
                         </div>
                         <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
                             <div class="col-md-12 item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
@@ -780,9 +780,9 @@
 
             <div *ngIf="filter_status == 11 || filter_status == 12 || filter_status == 13 || filter_status == 14">
                 <div class="row">
-                    <div class="col-xxl-5 col-md-5">
+                    <div class="col-xxl-5 col-md-5" (click)="openDetail(item.id)">
                         <div class="row">
-                            <div class="col-md-12 item_contract_name" (click)="openDetail(item.id)">{{item.name}}</div>
+                            <div class="col-md-12 item_contract_name">{{item.name}}</div>
                         </div>
                         <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
                             <div class="col-md-12 item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
@@ -873,12 +873,11 @@
                     </div>
                     <div class="col-xxl-5 col-md-4">
                         <div class="row">
-                            <div class="col-md-11" style="display: flex;">
+                            <div class="col-md-11" style="display: flex; cursor: pointer;" (click)="openDetail(item.contractId)">
                               <img src="../../assets/img/frame_contract.svg" style="width: 72px;">
                               <div style="margin-left: 12px;">
                                 <div class="item_contract_name">
                                     <a  class="item_contract_name" style="text-decoration: none;"
-                                        (click)="openDetail(item.contractId)"
                                         [routerLink]="['/main/form-contract/detail', item.contractId]"
                                         [queryParams]="{
                                         page: this.p,
