--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -81,7 +81,7 @@
       </div>
       
       <div class="col-md-2 calendar_create">
-        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.end_time | date: 'dd/MM/yyyy HH:mm:ss'}}</span></div>
+        <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.end_time | date: 'dd/MM/yyyy'}}</span></div>
       </div>
 
 
@@ -93,27 +93,27 @@
           </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && isQLMHD_09" (click)="cloneContractTemplateCall(item.id)">
-              <mat-icon><img src="../../assets/img/icon_copy.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/copy.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'role.contract-template.copy' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && isQLMHD_02" (click)="openEdit(item.id)">
-              <mat-icon><img src="../../assets/img/icon_edit.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/edit.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'role.contract-template.edit' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && item.releaseState=='CON_HIEU_LUC' && isQLMHD_03 && item.status == 10" (click)="stopContractTemplate(item.id)">
-              <mat-icon><img src="../../assets/img/icon_stop_release.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/pause-circle.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'stop.releasing' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && item.releaseState=='CON_HIEU_LUC' && item.status == 32 && isQLMHD_04" (click)="releaseContractTemplate(item.id)">
-              <mat-icon><img src="../../assets/img/icon_open_release.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/document-forward.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'Mở phát hành' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="item.status == 10 && item.releaseState=='CON_HIEU_LUC' && isQLHD_14" (click)="addContractForm(item.id)">
-              <mat-icon><img src="../../assets/img/icon_file.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/contract_temp.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'role.contract-template.create-contract' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="item.status == 10 && item.releaseState=='CON_HIEU_LUC' && isQLHD_15" (click)="addContractBatch(item.id)">
-              <mat-icon><img src="../../assets/img/icon_add_connect.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/contract-batch.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'role.contract-template.create-batch' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && item.status == 10 && item.releaseState=='CON_HIEU_LUC' && isQLMHD_05" (click)="shareContractTemplate(item.id)">
@@ -121,7 +121,7 @@
               <span class="three_dot_text">{{'btn.share' | translate}}</span>
             </button>
             <button mat-menu-item class="div_icon" *ngIf="isShare=='off' && isQLMHD_07" (click)="deleteContractTemplate(item.id)">
-              <mat-icon><img src="../../assets/img/icon_delete.svg" class="img_icon"/></mat-icon>
+              <mat-icon><img src="../../assets/img/trash_contract.svg" class="img_icon"/></mat-icon>
               <span class="three_dot_text">{{'role.contract-template.delete' | translate}}</span>
             </button>
           </mat-menu>
