--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -25,13 +25,13 @@
 
         </div>
         <div class="col-lg-1-1 col-md-6 btn_search btn-padding-right btn-padding-left" >
-          <button class="btn btn-lg btn-block btn_advanced" (click)="searchContract()" >
+          <button class="btn-block btn_advanced" (click)="searchContract()" >
             {{'btn.advance' | translate}}
             <img src="../../assets/img/vector_advance.svg" class="input-img" />
           </button>
         </div>
         <div class="col-lg-1-1 col-md-6 btn_search btn-padding-left">
-          <button (click)="cancelMany()" class="btn btn-lg btn-block btn_cancel">{{'cancel.multi'| translate}}</button>
+          <button (click)="cancelMany()" class="btn-block btn_cancel">{{'cancel.multi'| translate}}</button>
         </div>
       </div>
 
@@ -268,20 +268,20 @@
         </div>
 
         <div [ngClass]="{'btn-padding-right': status === 'draft' && isOrg === 'off', 'col-lg-1-1': true, 'col-md-4': status === 'draft' && isOrg === 'off', 'btn_search': true, 'btn-padding-left': true}">
-          <button class="btn btn-lg btn-block btn_advanced" (click)="searchContract()" >
+          <button class="btn-block btn_advanced" (click)="searchContract()" >
             {{'btn.advance' | translate}}
             <img src="../../assets/img/vector_advance.svg" class="input-img" />
           </button>
         </div>
 
         <div *ngIf="status == 'draft' && this.isOrg == 'off'" class="col-lg-1-1 col-md-4 btn_search btn-padding-right btn-padding-left" >
-          <button class="btn btn-lg btn-block btn_cancel" (click)="release()">
+          <button class="btn-block btn_cancel" (click)="release()">
             {{'release'|translate}}
           </button>
         </div>
 
         <div *ngIf="status == 'draft' && this.isOrg == 'off'" class="col-lg-1-1 col-md-4 btn_search btn-padding-left" >
-          <button class="btn btn-lg btn-block btn_cancel" (click)="multiDeleteDraft('multiDelete')">
+          <button class="btn-block btn_cancel" (click)="multiDeleteDraft('multiDelete')">
             {{'btn.multi.delete'|translate}}
           </button>
         </div>
@@ -550,14 +550,14 @@
         </div>
 
         <div class="col-lg-1-1 col-md-6 btn_search btn-padding-right btn-padding-left" >
-          <button class="btn btn-lg btn-block btn_advanced" (click)="searchContract()" >
+          <button class="btn-block btn_advanced" (click)="searchContract()" >
             {{'btn.advance' | translate}}
             <img src="../../assets/img/vector_advance.svg" class="input-img" />
           </button>
         </div>
 
         <div class="col-lg-1-1 col-md-6 btn_search btn-padding-left">
-          <button *ngIf="this.typeDisplay === 'view'" (click)="downloadMany()" class="btn btn-lg btn-block btn_cancel">{{'download.multi'|translate}}</button>
+          <button *ngIf="this.typeDisplay === 'view'" (click)="downloadMany()" class="btn-block btn_cancel">{{'download.multi'|translate}}</button>
         </div>
       </div>
 
@@ -744,14 +744,14 @@
         </div>
 
         <div class="col-lg-1-1 col-md-6 btn_search btn-padding-right btn-padding-left" >
-          <button class="btn btn-lg btn-block btn_advanced" (click)="searchContract()" >
+          <button class="btn-block btn_advanced" (click)="searchContract()" >
             {{'btn.advance' | translate}}
             <img src="../../assets/img/vector_advance.svg" class="input-img" />
           </button>
         </div>
 
         <div class="col-lg-1-1 col-md-6 btn_search btn-padding-left">
-          <button *ngIf="this.typeDisplay === 'view'" (click)="downloadMany()" class="btn btn-lg btn-block btn_cancel">{{'download.multi'|translate}}</button>
+          <button *ngIf="this.typeDisplay === 'view'" (click)="downloadMany()" class="btn-block btn_cancel">{{'download.multi'|translate}}</button>
         </div>
       </div>
 
@@ -984,18 +984,18 @@
             </div>
 
             <div class="col-lg-1-1 col-md-4 btn_search btn-padding-right btn-padding-left" >
-              <button class="btn btn-lg btn-block btn_advanced" (click)="searchContract()" >
+              <button class="btn-block btn_advanced" (click)="searchContract()" >
                 {{'btn.advance' | translate}}
                 <img src="../../assets/img/vector_advance.svg" class="input-img" />
               </button>
             </div>
 
             <div class="col-lg-1-1 col-md-4 btn_search btn-padding-right btn-padding-left" *ngIf="this.typeDisplay === 'downloadMany'">
-              <button (click)="downloadManyContract()" class="btn btn-lg btn-block btn_cancel">{{'contract.down'| translate}}</button>
+              <button (click)="downloadManyContract()" class="btn-block btn_cancel">{{'contract.down'| translate}}</button>
             </div>
 
             <div class="col-lg-1-1 col-md-4 btn_search btn-padding-left" *ngIf="this.typeDisplay === 'downloadMany'">
-              <button (click)="cancelDownloadMany()" class="btn btn-lg btn-block btn_cancel">{{'cancel'| translate}}</button>
+              <button (click)="cancelDownloadMany()" class="btn-block btn_cancel">{{'cancel'| translate}}</button>
             </div>
 
             <!-- <div *ngIf="this.typeDisplay === 'downloadMany'" style="padding-top: 10px;">
@@ -1198,18 +1198,18 @@
             </div>
 
             <div class="col-lg-1-1 btn-padding-right btn-padding-left btn_search">
-              <button class="btn btn-lg btn-block btn_advanced" (click)="searchContract()" >
+              <button class="btn-block btn_advanced" (click)="searchContract()" >
                 {{'btn.advance' | translate}}
                 <img src="../../assets/img/vector_advance.svg" class="input-img" />
               </button>
             </div>
 
             <div class="col-lg-1-1 btn-padding-right btn-padding-left btn_search">
-              <button (click)="releaseMany()" class="btn btn-lg btn-block btn_cancel">{{'release'| translate}}</button>
+              <button (click)="releaseMany()" class="btn-block btn_cancel">{{'release'| translate}}</button>
             </div>
 
             <div class="col-lg-1-1 btn-padding-left btn_search">
-              <button (click)="cancelDownloadMany()" class="btn btn-lg btn-block btn_cancel">{{'cancel'| translate}}</button>
+              <button (click)="cancelDownloadMany()" class="btn-block btn_cancel">{{'cancel'| translate}}</button>
             </div>
           </div>
 
@@ -1394,18 +1394,18 @@
           </div>
 
           <div class="col-lg-1-1 btn-padding-right btn-padding-left btn_search">
-            <button class="btn btn-lg btn-block btn_advanced" (click)="searchContract()" >
+            <button class="btn-block btn_advanced" (click)="searchContract()" >
               {{'btn.advance' | translate}}
               <img src="../../assets/img/vector_advance.svg" class="input-img" />
             </button>
           </div>
 
           <div class="col-lg-1-1 btn-padding-right btn-padding-left btn_search">
-            <button (click)="multiDeleteDraftMany()" class="btn btn-lg btn-block btn_cancel">{{'btn.delete'| translate}}</button>
+            <button (click)="multiDeleteDraftMany()" class="btn-block btn_cancel">{{'btn.delete'| translate}}</button>
           </div>
 
           <div class="col-lg-1-1 btn-padding-left btn_search">
-            <button (click)="cancelDeleteDraftMany()" class="btn btn-lg btn-block btn_cancel">{{'cancel'| translate}}</button>
+            <button (click)="cancelDeleteDraftMany()" class="btn-block btn_cancel">{{'cancel'| translate}}</button>
           </div>
         </div>
 
